--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: CI
 
 on:
@@ -14,29 +11,39 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        node-version: [14.x, 16.x, 18.x]
 
     steps:
     - uses: actions/checkout@v3
 
-    - name: Install Node.JS ${{ matrix.node-version }}
+    - name: Install Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    
-    - name: Install dependencies
+
+    - name: Cache de dependências
+      uses: actions/cache@v2
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+
+    - name: Instalar dependências
       run: npm install
-    
-    - name: Build
+
+    - name: Instalar Jest
+      run: npm install --save-dev ts-jest
+
+    - name: Construir
       run: npm run build --if-present
       
-    - name: Run tests
+    - name: Executar testes
       run: npm run test
       
     - name: Lint
       run: npx eslint src/**/*.ts
     
-    - name: Run ts-prune
+    - name: Executar ts-prune
       run: npm run find-deadcode
