--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   semantic_release:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -15,12 +15,12 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18'
+          node-version: '14' # Usando uma versão suportada pelo semantic-release
 
       - name: Install semantic-release
-        run: npm install -g semantic-release
+        run: npm install -g semantic-release@17 # Versão compatível com o Node.js 14
 
       - name: Run semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: semantic-release
+        run: npx semantic-release # Usando o npx para executar o semantic-release localmente
