--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -21,7 +21,10 @@ jobs:
       - name: Install Dependencies
         run: |
           npm install @commitlint/cli @commitlint/config-conventional
-          npm install timers-promises
+
+      - name: Polyfill timers/promises
+        run: |
+          require('timers-promises-polyfill');
 
       - name: Validate Commits
         run: |
